--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "^10.4.2",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
+    "firebase-tools": "^11.6.0",
     "jest": "^27.5.1",
     "parcel": "^2.6.2",
     "postcss": "^8.4.6",
